--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,25 +27,25 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.3, 8.2, 8.1]
-        laravel: [11.*, 10.*]
+        php: [8.4, 8.3, 8.2]
+        laravel: [12.*, 11.*]
         stability: [prefer-stable]
         include:
+          - laravel: 12.*
+            testbench: 10.*
+            carbon: 3.*
+            collision: 8.*
           - laravel: 11.*
             testbench: 9.*
             carbon: 3.*
             collision: 8.*
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: 2.*
-            collision: 7.*
         exclude:
           - laravel: 11.*
             php: 8.1
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Cache Dependencies
         uses: actions/cache@v4
@@ -71,4 +71,4 @@ jobs:
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
-        run: vendor/bin/pest
+        run: composer test
